--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -1,3 +1,17 @@
+@import "./base.css";
+
 .root {
   position: relative;
+  font-size: 1em;
+  width: fit-content;
+}
+
+.button {
+  border-left: var(--border-size) solid var(--main-border-colour);
+  border-right: var(--border-size) solid var(--main-border-colour);
+  background-color: var(--main-bg-colour);
+  width: min-content;
+  padding: 5px 10px;
+  border-radius: var(--border-radius);
+  color: var(--main-text-colour);
 }
