css addded border

--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -7,11 +7,12 @@
 }
 
 .button {
-  border-left: var(--border-size) solid var(--main-border-colour);
   border-right: var(--border-size) solid var(--main-border-colour);
+  border-bottom: var(--border-size) solid var(--main-border-colour);
   background-color: var(--main-bg-colour);
   width: min-content;
   padding: 5px 10px;
   border-radius: var(--border-radius);
   color: var(--main-text-colour);
+  cursor: pointer;
 }
