--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -4,6 +4,15 @@
   position: relative;
   font-size: 1em;
   width: fit-content;
+  outline: 0;
+  padding: 0;
+  border: 0;
+}
+.root::-moz-focus-inner {
+  border: 0;
+}
+.root:focus {
+  outline: 0;
 }
 
 .button {
@@ -14,5 +23,15 @@
   padding: 5px 10px;
   border-radius: var(--border-radius);
   color: var(--main-text-colour);
+  margin: 0;
   cursor: pointer;
+  outline: 0;
+  transition: border 180ms ease-in-out, margin 190ms ease-in-out;
+}
+
+.button:active {
+  border: 0;
+  margin-left: var(--border-size);
+  margin-top: var(--border-size);
+  outline: 0;
 }
