--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -26,11 +26,12 @@
   margin: 0;
   cursor: pointer;
   outline: 0;
-  transition: border 180ms ease-in-out, margin 190ms ease-in-out;
+  transition: all 150ms ease-in-out;
 }
 
 .button:active {
-  border: 0;
+  border-right: 0 solid var(--main-border-colour);
+  border-bottom: 0 solid var(--main-border-colour);
   margin-left: var(--border-size);
   margin-top: var(--border-size);
   outline: 0;
