--- a/src/components/styles/base.css
+++ b/src/components/styles/base.css
@@ -6,3 +6,20 @@
   --main-text-colour: #fff;
   --main-shadow: 9px 4px 23px -5px rgba(0, 0, 0, 0.56);
 }
+.ripple {
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  transform: scale(0);
+  opacity: 1;
+}
+.rippleAnimation {
+  animation: rippleKeys 0.5s linear;
+}
+@keyframes rippleKeys {
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
+}
