--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -36,3 +36,21 @@
   margin-top: var(--border-size);
   outline: 0;
 }
+
+.ripple {
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  transform: scale(0);
+  opacity: 1;
+}
+.rippleAnimation {
+  animation: rippleKeys 0.5s linear;
+}
+@keyframes rippleKeys {
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
+}
