--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -38,19 +38,22 @@
 }
 
 .ripple {
-  background-color: rgba(255, 255, 255, 0.1);
-  width: 0;
-  height: 0;
+  background-color: var(--main-button-ripple);
+  width: 1px;
+  height: 1px;
   border-radius: 50%;
   transform: scale(0);
   opacity: 1;
+  position: absolute;
+  z-index: 5;
+  cursor: pointer;
 }
 .rippleAnimation {
   animation: rippleKeys 0.5s linear;
 }
 @keyframes rippleKeys {
   100% {
-    transform: scale(3);
+    transform: scale(90);
     opacity: 0;
   }
 }
