--- a/src/components/styles/base.css
+++ b/src/components/styles/base.css
@@ -3,6 +3,6 @@
   --border-radius: 5px;
   --main-border-colour: #16a085;
   --main-bg-colour: #1abc9c;
-  --main-text-colour: #fff;
+  --main-sub-text-colour: #fff;
   --main-button-ripple: rgba(255, 255, 255, 0.4);
 }
