--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -34,7 +34,7 @@
   cursor: pointer;
   outline: 0;
   width: min-content;
-  padding: 5px 10px;
+  padding: 0.25em 0.5em;
   border-radius: var(--border-radius);
 }
 
