--- a/src/components/styles/TextField.css
+++ b/src/components/styles/TextField.css
@@ -4,8 +4,9 @@
   margin: 0;
   padding: 0;
   font-size: 1em;
-  height: max-content;
+  height: 2em;
   position: relative;
+  width: auto;
 }
 .root > input {
   border: 0;
@@ -14,22 +15,27 @@
   background: transparent;
   position: absolute;
   bottom: 0;
+  width: 12em;
+  font-size: 1em;
+  transition: all 80ms ease-in-out;
+  padding-left: 0.2em;
 }
 .root > input:focus {
   outline: none;
+  background-color: var(--buttonDarkRipple);
+  border-radius: var(--border-radius);
 }
 .sub {
   position: relative;
   display: block;
   color: var(--borderColour);
   font-size: 0.5em;
-  transition: all 80ms linear;
-  margin-top: 0.1em;
+  transition: all 80ms ease-in-out;
+  top: 0;
+  padding-left: 0.2em;
 }
 
 .subFg {
-  margin-top: -0.5em;
-  top: 1em;
-  margin-bottom: 0;
   font-size: 1em;
+  top: 0.5em;
 }
