--- a/src/components/styles/base.css
+++ b/src/components/styles/base.css
@@ -3,4 +3,5 @@
   --border-radius: 0.25em;
   --button-ripple: rgba(255, 255, 255, 0.4);
   --button-dark-ripple: rgba(0, 0, 0, 0.3);
+  --input-back: rgba(0, 0, 0, 0.05);
 }
