--- a/src/components/styles/base.css
+++ b/src/components/styles/base.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 :root {
   --border-size: 0.15em;
   --border-radius: 0.25em;
   --button-ripple: rgba(255, 255, 255, 0.4);
   --button-dark-ripple: rgba(0, 0, 0, 0.3);
   --input-back: rgba(0, 0, 0, 0.02);
+  font-family: "Open Sans", sans-serif;
 }
