--- a/src/components/styles/TextField.css
+++ b/src/components/styles/TextField.css
@@ -8,6 +8,7 @@
   position: relative;
   width: auto;
   overflow: hidden;
+  font-family: var(--fontFamily);
 }
 .root input {
   border: var(--border-size);
