Major Button fixes

--- a/src/components/styles/Button.css
+++ b/src/components/styles/Button.css
@@ -1,6 +1,6 @@
 @import "./base.css";
 
-.root {
+:local(.root) {
   position: relative;
   font-size: 1em;
   width: fit-content;
@@ -11,14 +11,14 @@
   height: calc(2em + 30px);
   font-family: var(--fontFamily);
 }
-.root::-moz-focus-inner {
+:local(.root)::-moz-focus-inner {
   border: 0;
 }
-.root:focus {
+:local(.root):focus {
   outline: 0;
 }
 
-.container {
+:local(.container) {
   overflow: hidden;
   width: min-content;
   height: min-content;
@@ -28,9 +28,9 @@
   padding: 0;
 }
 
-.button,
-.flatButton,
-.borderlessButton {
+:local(.button),
+:local(.flatButton),
+:local(.borderlessButton) {
   margin: 0;
   cursor: pointer;
   outline: 0;
@@ -39,7 +39,7 @@
   border-radius: var(--border-radius);
 }
 
-.button {
+:local(.button) {
   border-right: var(--border-size) solid var(--borderColour);
   border-bottom: var(--border-size) solid var(--borderColour);
   background-color: var(--secondaryBackgroundColour);
@@ -47,7 +47,7 @@
   transition: all 150ms ease-in-out;
 }
 
-.button:active {
+:local(.button):active {
   border-right: 0 solid var(--borderColour);
   border-bottom: 0 solid var(--borderColour);
   margin-left: var(--border-size);
@@ -55,42 +55,42 @@
   outline: 0;
 }
 
-.flatButton {
+:local(.flatButton) {
   border: var(--border-size) solid var(--borderColour);
   color: var(--borderColour);
   background-color: transparent;
   transition: all 80ms ease-out;
 }
 
-.flatButton:active {
+:local(.flatButton):active {
   filter: blur(1px);
   transform: scale(0.95);
 }
 
-.borderlessButton {
+:local(.borderlessButton) {
   color: var(--borderColour);
   background-color: transparent;
 }
 
-.ripple {
+:local(.ripple) {
   width: 5px;
   height: 5px;
   border-radius: 100%;
   transform: scale(0);
   opacity: 1;
   position: absolute;
-  z-index: 5;
+  z-index: 100;
   cursor: pointer;
 }
-.button ~ .ripple {
+:local(.button) ~ :local(.ripple) {
   background-color: var(--buttonRipple);
 }
-.flatButton ~ .ripple,
-.borderlessButton ~ .ripple {
+:local(.flatButton) ~ :local(.ripple),
+:local(.borderlessButton) ~ :local(.ripple) {
   background-color: var(--buttonDarkRipple);
 }
 
-.rippleAnimation {
+:local(.rippleAnimation) {
   animation: rippleKeys 0.5s linear;
 }
 @keyframes rippleKeys {
